# file-duplicates

./: Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
duped/: Cargo.toml
duped-cli/: Cargo.toml
duped-cli/src/: main.rs
duped/src/: db.rs  duplicates.rs  file.rs  hasher.rs  lib.rs  traits.rs
file-duplicates/: Cargo.toml
file-duplicates-cli/: Cargo.toml
file-duplicates/src/: lib.rs
src/: db.rs  lib.rs  main.rs
