[package]
name = "file-duplicates"
version = "0.4.1"
edition = "2021"

[[bin]]
name = "fdup"
path = "./src/main.rs"

[dependencies]
anyhow = "1"
blake3 = "1.3"
byte-unit = { version = "4.0", default-features = false, features = ["alloc"] }
filetime = "0.2"
home = "0.5"
num_cpus = "1.13"
pico-args = "0.5"
rlimit = "0.9"
rusqlite = "0.28"
walkdir = "2"

[dev-dependencies]
tempfile = "3.3"
