[package]
name = "duped-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI that helps you find file duplicates."
license = "GPL-3.0-or-later"

[[bin]]
name = "duped"
path = "./src/main.rs"

[dependencies]
anyhow = "1"
byte-unit = "5"
duped = { path = "../duped", version = "0.1.0" }
pico-args = "0.5"

[dev-dependencies]
tempfile = "3"
