[package]
name = "duped"
version = "0.1.0"
edition = "2021"
description = "A library that helps you find file duplicates."
license = "GPL-3.0-or-later"

[dependencies]
blake3 = "1"
byte-unit = "5"
filetime = "0.2"
num_cpus = "1"
rlimit = "0.10"
rusqlite = { version = "0.35", optional = true }
walkdir = "2"

[features]
sqlite = ["rusqlite"]

[dev-dependencies]
tempfile = "3"
